Fix spacing in second container

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ footer {
 .information-header {
   font-size: 36px;
   font-weight: bolder;
+  padding-bottom: 25px;
 }
 
 .information-header,
@@ -116,7 +117,8 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
+  padding-top: 25px;
+  padding-bottom: 155px;
 }
 
 .boxes {
